Outsource: Fix z-index for translator loader

--- a/public/css/sass/commons/_outsource.scss
+++ b/public/css/sass/commons/_outsource.scss
@@ -337,7 +337,7 @@
             left: 50%;
             margin: 0;
             text-align: center;
-            z-index: 1000;
+            z-index: 1;
             -webkit-transform: translateX(-50%) translateY(-50%);
             transform: translateX(-50%) translateY(-50%);
             img {
